syntax = "proto3";
package cbservice;

service ComputeBroker {
    rpc AddHost (AddHostRequest) returns (AddHostResponse);
    rpc GetHostInfo (GetHostInfoRequest) returns (GetHostInfoResponse);
    rpc ListHosts (ListHostsRequest) returns (ListHostsResponse);
}

message AddHostRequest {
    string hostname = 1;
    string info = 2;
}

message AddHostResponse {
}

message GetHostInfoRequest {
    string hostname = 1;
}

message HostInfo {
    string id = 1;
    string hostname = 2;
    string info = 3;
}

message GetHostInfoResponse {
    HostInfo host_info = 1;
}

message ListHostsRequest {
}

message ListHostsResponse {
    repeated HostInfo host_infos = 1;
}
